--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,25 @@
 </head>
 <body>
 <script>
+  const pressed = [];
+  const secretCode = 'bosbos';
+  window.addEventListener('keyup', (e) => {
+    // console.log(e, e.type);
+    pressed.push(e.key);
+    
+    // // this also works
+    // if (pressed.length>secretCode.length) {
+    //   pressed.splice(0, 1);
+    // }
+
+    pressed.splice(0,pressed.length-secretCode.length);
+
+    console.log(pressed);
+    if (pressed.join('')===secretCode) {
+      console.log('Got it!');
+      cornify_add();
+    }
+  });
 </script>
 </body>
 </html>
